Fix: ForgotPassword screen alignment

--- a/src/mobile/styles/screens/ForgotPassword.pcss
+++ b/src/mobile/styles/screens/ForgotPassword.pcss
@@ -17,6 +17,7 @@
   }
   .cr-email-form {
     background: unset;
+    margin: 0 auto;
   }
   .cr-email-form__form-content {
     position: static;
